@@ -111,8 +111,12 @@ limitations under the License.
             
           </ul>
 
-          <ul id="menu-selector">
-          </ul>
+          <div id="core-selector">
+            <select data-placeholder="Core Selector"></select>
+          </div>
+          <div id="core-menu">
+            <ul></ul>
+          </div>
                   
         </div>
       </div>
